Added section navigation

--- a/package/index.html
+++ b/package/index.html
@@ -21,10 +21,15 @@
        hello world!
     </aside>
 
-    <section>
+    <section id="section_1">
         <header><button data-action="aside">ASIDE!!</button></header>
         <article>Article</article>
         <footer>pie</footer>
+    </section>
+
+    <section id="section_2">
+        <header><button data-action="aside">ASIDE!!</button>SECTION 2</header>
+        <article>Article</article>
     </section>
 
     <div id="background"></div>
