--- a/package/index.html
+++ b/package/index.html
@@ -23,17 +23,34 @@
 
     <section id="section_1">
         <header><button data-action="aside">ASIDE!!</button></header>
-        <article>Article</article>
+        <article id="a11">
+            Article11
+            <button data-section="section_2">Second Section</button>
+        </article>
+        <article id="a12">
+            Article12
+            <button data-article="a22">Second section article 2</button>
+        </article>
         <footer>pie</footer>
     </section>
 
     <section id="section_2">
         <header><button data-action="aside">ASIDE!!</button>SECTION 2</header>
-        <article>Article</article>
+        <article id="a21">
+            Article21
+            <button data-article="a12">First section article 2</button>
+        </article>
+        <article id="a22">
+            Article22
+            <button data-article="a11">First Section</button>
+        </article>
     </section>
 
     <div id="background"></div>
     <script src="js/TaKo.components.js"></script>
     <script src="js/TaKo.debug.js"></script>
+    <script>
+        TaKo.init();
+    </script>
 </body>
 </html>
