Changes on styles

--- a/package/index.html
+++ b/package/index.html
@@ -22,7 +22,12 @@
     </aside>
 
     <section id="section_1">
-        <header><button data-action="aside">ASIDE!!</button></header>
+        <header>
+            <nav class="left">
+                <button data-action="aside">ASIDE!!</button>
+            </nav>
+            <h1>TaKo!!</h1>
+        </header>
         <article id="a11">
             Article11
             <button data-section="section_2">Second Section</button>
