--- a/package/index.html
+++ b/package/index.html
@@ -40,14 +40,19 @@
     </section>
 
     <section id="section_2">
-        <header><button data-action="aside">ASIDE!!</button>SECTION 2</header>
+        <header>
+            <nav class="right">
+                <button data-action="aside">ASIDE!!</button>
+            </nav>
+            <h1>SECTION 2</h1>
+        </header>
         <article id="a21">
             Article21
-            <button data-article="a12">First section article 2</button>
+            <button data-article="a12" class="cancel">First section article 2</button>
         </article>
         <article id="a22">
             Article22
-            <button data-article="a11">First Section</button>
+            <button data-article="a11" class="accept">First Section</button>
         </article>
     </section>
 
