--- a/package/index.html
+++ b/package/index.html
@@ -24,7 +24,7 @@
     <section id="section_1">
         <header>
             <nav class="left">
-                <button data-action="aside">ASIDE!!</button>
+                <button class="button" data-action="aside">ASIDE!!</button>
             </nav>
             <h1>TaKo!!</h1>
         </header>
