--- a/package/index.html
+++ b/package/index.html
@@ -36,7 +36,16 @@
             Article12
             <button data-article="a22">Second section article 2</button>
         </article>
-        <footer>pie</footer>
+        <footer>
+            <nav>
+              <div>
+                  <button>Hola</button>
+              </div>
+              <div>
+                  <button>Adios</button>
+              </div>
+            </nav>
+        </footer>
     </section>
 
     <section id="section_2">
