Added colors and lists

--- a/package/index.html
+++ b/package/index.html
@@ -31,6 +31,13 @@
         <article id="a11">
             Article11
             <button data-section="section_2">Second Section</button>
+            <ul>
+                <li>Elem 1</li>
+                <li>Elem 2</li>
+                <li class="separator">Elem3</li>
+                <li>Elem 4</li>
+                <li>Elem 5</li>
+            </ul>
         </article>
         <article id="a12">
             Article12
