--- a/package/index.html
+++ b/package/index.html
@@ -28,16 +28,18 @@
             </nav>
             <h1>TaKo!!</h1>
         </header>
-        <article id="a11">
-            Article11
-            <button data-section="section_2">Second Section</button>
-            <ul>
-                <li>Elem 1</li>
-                <li>Elem 2</li>
-                <li class="separator">Elem3</li>
-                <li>Elem 4</li>
-                <li>Elem 5</li>
-            </ul>
+        <article id="a11" class="indented">
+            <div>
+                Article11
+                <button data-section="section_2">Second Section</button>
+                <ul>
+                    <li>Elem 1 <br> eeee</li>
+                    <li>Elem 2</li>
+                    <li class="separator">Elem3</li>
+                    <li>Elem 4</li>
+                    <li>Elem 5</li>
+                </ul>
+            </div>
         </article>
         <article id="a12">
             Article12
