Changes on aside

--- a/package/index.html
+++ b/package/index.html
@@ -18,7 +18,13 @@
 
 <body>
     <aside>
-       hello world!
+        <ul>
+            <li>Elem 1</li>
+            <li>Elem 2</li>
+            <li>Elem 3</li>
+            <li>Elem 4</li>
+            <li>Elem 5</li>
+        </ul>
     </aside>
 
     <section id="section_1">
