Style and routering changes

--- a/package/index.html
+++ b/package/index.html
@@ -19,7 +19,7 @@
 <body>
     <aside>
         <ul>
-            <li>Elem 1</li>
+            <li data-section="section_2">To section 2</li>
             <li>Elem 2</li>
             <li>Elem 3</li>
             <li>Elem 4</li>
@@ -37,7 +37,7 @@
         <article id="a11" class="indented">
             <div>
                 Article11
-                <button data-section="section_2">Second Section</button>
+                <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>Elem 1 <br> eeee</li>
                     <li>Elem 2</li>
