--- a/package/index.html
+++ b/package/index.html
@@ -19,7 +19,7 @@
 <body>
     <aside>
         <ul>
-            <li data-section="section_2">To section 2 <span class="counter">5</span></li>
+            <li data-section="section_2">To section 2 <span class="counter">125</span></li>
             <li>Elem 2</li>
             <li>Elem 3</li>
             <li>Elem 4</li>
@@ -54,10 +54,10 @@
         <footer>
             <nav>
               <div>
-                  <button>Hola</button>
+                  <button>Hola<span class="counter">5</span></button>
               </div>
               <div>
-                  <button>Adios</button>
+                  <button>Adios<span class="counter">84</span></button>
               </div>
             </nav>
         </footer>
