Header counter and footer counter changes

--- a/package/index.html
+++ b/package/index.html
@@ -30,7 +30,7 @@
     <section id="section_1">
         <header>
             <nav class="left">
-                <button class="button" data-action="aside">ASIDE!!</button>
+                <button class="button" data-action="aside">ASIDE!! <span class="counter">5</span></button>
             </nav>
             <h1>TaKo!!</h1>
         </header>
@@ -66,7 +66,7 @@
     <section id="section_2">
         <header>
             <nav class="right">
-                <button data-action="aside">ASIDE!!</button>
+                <button data-action="aside">ASIDE!!<span class="counter">5</span></button>
             </nav>
             <h1>SECTION 2</h1>
         </header>
