Added grid system (TODO: check and fix vertical grid)

--- a/package/index.html
+++ b/package/index.html
@@ -52,6 +52,22 @@
                     <div class="one_column" style="background-color:green;">b</div>
                     <div class="three_column" style="background-color:red;">a</div>
                 </div>
+                <br><br>
+                <div class="vertical grid">
+                    <div class="box_2" style="background-color:red;">a</div>
+                    <div  style="background-color:green;">b</div>
+                    <div  style="background-color:red;">a</div>
+                    <div class="box_4" style="background-color:green;">b</div>
+                    <div  style="background-color:red;">a</div>
+                </div>
+                <br>
+                <div class="horizontal grid">
+                    <div class="box_2" style="background-color:red;">a</div>
+                    <div  style="background-color:green;">b</div>
+                    <div  style="background-color:red;">a</div>
+                    <div class="box_4" style="background-color:green;">b</div>
+                    <div  style="background-color:red;">a</div>
+                </div>
             </div>
         </article>
         <article id="a12">
