--- a/package/index.html
+++ b/package/index.html
@@ -53,12 +53,14 @@
                     <div class="three_column" style="background-color:red;">a</div>
                 </div>
                 <br><br>
-                <div class="vertical grid">
-                    <div class="box_2" style="background-color:red;">a</div>
-                    <div  style="background-color:green;">b</div>
-                    <div  style="background-color:red;">a</div>
-                    <div class="box_4" style="background-color:green;">b</div>
-                    <div  style="background-color:red;">a</div>
+                <div style="height:300px;">
+                    <div class="vertical grid">
+                        <div class="box_2" style="background-color:red;">a</div>
+                        <div  style="background-color:green;">b</div>
+                        <div  style="background-color:red;">a</div>
+                        <div class="box_4" style="background-color:green;">b</div>
+                        <div  style="background-color:red;">a</div>
+                    </div>
                 </div>
                 <br>
                 <div class="horizontal grid">
