Added button sizes

--- a/package/index.html
+++ b/package/index.html
@@ -45,7 +45,16 @@
                     <li>Elem 4</li>
                     <li>Elem 5</li>
                 </ul>
-                <div class="line">
+                <button class="smallest">Smallest</button>
+                <button class="small">Small</button>
+                <button >Normal</button>
+                <button class="big">Big</button>
+                <button class="biggest">Biggest</button>
+        </article>
+        <article id="a12">
+            Article12
+            <button data-article="a22">Second section article 2</button>
+             <div class="line">
                     <div class="one_column" style="background-color:red;">a</div>
                     <div class="one_column" style="background-color:green;">b</div>
                     <div class="one_column two_gap" style="background-color:red;">a</div>
@@ -71,10 +80,6 @@
                     <div  style="background-color:red;">a</div>
                 </div>
             </div>
-        </article>
-        <article id="a12">
-            Article12
-            <button data-article="a22">Second section article 2</button>
         </article>
         <footer>
             <nav>
