Fixings for android keyboard

--- a/package/index.html
+++ b/package/index.html
@@ -83,6 +83,7 @@
         </article>
         <article id="a12">
             Article12
+            <input type="text">
             <button data-article="a22">Second section article 2</button>
              <div class="line">
                     <div class="one_column" style="background-color:red;">a</div>
@@ -133,6 +134,22 @@
         <article id="a21">
             Article21
             <button data-article="a12" class="cancel">First section article 2</button>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
+            <input type="text"><br>
         </article>
         <article id="a22">
             Article22
