New section vertical layout, removing iscroll for scrolling and fixing android keyboard

--- a/package/index.html
+++ b/package/index.html
@@ -27,7 +27,7 @@
         </ul>
     </aside>
 
-    <section id="section_1">
+    <section id="section_1" class="footer">
         <header>
             <nav class="left">
                 <button class="button" data-action="aside">ASIDE!! <span class="counter">5</span></button>
@@ -75,6 +75,7 @@
                     <li>Elem 4</li>
                     <li>Elem 5</li>
                 </ul>
+                <input type="text">
                 <button class="smallest">Smallest</button>
                 <button class="small">Small</button>
                 <button >Normal</button>
