Fixed footer for android

--- a/package/index.html
+++ b/package/index.html
@@ -115,12 +115,10 @@
         </article>
         <footer>
             <nav>
-              <div>
-                  <button id="show_success">Success<span class="counter">5</span></button>
-              </div>
-              <div>
-                  <button id="show_progress">Progress<span class="counter">84</span></button>
-              </div>
+                <ul>
+                    <li><button id="show_success">Success<span class="counter">5</span></button></li>
+                    <li><button id="show_progress">Progress<span class="counter">84</span></button></li>
+                </ul>
             </nav>
         </footer>
     </section>
