Fixed android and firefox footer

--- a/package/index.html
+++ b/package/index.html
@@ -115,10 +115,8 @@
         </article>
         <footer>
             <nav>
-                <ul>
-                    <li><button id="show_success">Success<span class="counter">5</span></button></li>
-                    <li><button id="show_progress">Progress<span class="counter">84</span></button></li>
-                </ul>
+                <div><button id="show_success">Success<span class="counter">5</span></button></div>
+                <div><button id="show_progress">Progress<span class="counter">84</span></button></div>
             </nav>
         </footer>
     </section>
