--- a/package/index.html
+++ b/package/index.html
@@ -40,20 +40,14 @@
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>Elem 1 <br> eeee
-                        <span class="circle onright">
-                            <input id="radio1" name="radiotest" type="radio">
-                        </span>
+                        <input id="radio1" name="radiotest" class="circle onright" type="radio">
                     </li>
                     <li>Elem 2
-                        <span class="circle onright">
-                            <input id="radio2" name="radiotest" type="radio">
-                        </span>
+                        <input id="radio2" name="radiotest" class="circle onright" type="radio">
                     </li>
                     <li class="separator">Elem3</li>
                     <li>Elem 4
-                        <span class="square onright">
-                            <input id="squareselector" type="checkbox">
-                        </span>
+                    <input id="squareselector" class="square onright" type="checkbox">
                     </li>
                     <li>Elem 5</li>
                     <li>Elem 1 <br> eeee</li>
