--- a/package/index.html
+++ b/package/index.html
@@ -39,15 +39,18 @@
                 Article11
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
-                    <li>Elem 1 <br> eeee
+                    <li>
                         <input id="radio1" name="radiotest" class="circle onright" type="radio">
+                        <strong>Elem 1</strong><small>eeee</small>
                     </li>
-                    <li>Elem 2
+                    <li>
                         <input id="radio2" name="radiotest" class="circle onright" type="radio">
+                        Elem 2
                     </li>
                     <li class="separator">Elem3</li>
-                    <li>Elem 4
-                    <input id="squareselector" class="square onright" type="checkbox">
+                    <li>
+                        <input id="squareselector" class="square onright" type="checkbox">
+                        Elem 4
                     </li>
                     <li>Elem 5</li>
                     <li>Elem 1 <br> eeee</li>
