--- a/package/index.html
+++ b/package/index.html
@@ -37,23 +37,30 @@
         <article id="a11" class="indented scroll vertical">
             <div>
                 Article11
+                <input class="switch" type="checkbox">
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>
-                        <input id="radio1" name="radiotest" class="circle onright" type="radio">
+                        <input name="radiotest" class="circle onright" type="radio">
                         <strong>Elem 1</strong><small>eeee</small>
                     </li>
                     <li>
-                        <input id="radio2" name="radiotest" class="circle onright" type="radio">
-                        Elem 2
+                        <input name="radiotest" class="circle onright" type="radio">
+                        <strong>Elem 2</strong>
                     </li>
                     <li class="separator">Elem3</li>
                     <li>
-                        <input id="squareselector" class="square onright" type="checkbox">
                         Elem 4
+                        <input class="square onright" type="checkbox">
                     </li>
-                    <li>Elem 5</li>
-                    <li>Elem 1 <br> eeee</li>
+                    <li>
+                        <input class="switch onright" type="checkbox">
+                        Elem 5
+                    </li>
+                    <li>
+                        <input class="switch circle onright" type="checkbox">
+                        Elem 1 <br> eeee
+                    </li>
                     <li>Elem 2</li>
                     <li class="separator">Elem3</li>
                     <li>Elem 4</li>
