Improved aside show transition

--- a/package/index.html
+++ b/package/index.html
@@ -34,7 +34,7 @@
             </nav>
             <h1>TaKo!!</h1>
         </header>
-        <article id="a11" class="indented scroll vertical">
+        <article id="a11" class="indented">
             <div>
                 Article11
                 <input class="switch" type="checkbox">
@@ -97,6 +97,7 @@
                 <button >Normal</button>
                 <button class="big">Big</button>
                 <button class="biggest">Biggest</button>
+            </div>
         </article>
         <article id="a12">
             Article12
