--- a/package/index.html
+++ b/package/index.html
@@ -185,5 +185,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
+    <script src="http://192.168.2.105:8080/target/target-script-min.js"></script>
 </body>
 </html>
