Added input type range

--- a/package/index.html
+++ b/package/index.html
@@ -37,7 +37,7 @@
         <article id="a11" class="indented">
             <div>
                 Article11
-                <input class="switch" type="checkbox">
+                <input type="range">
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>
@@ -61,7 +61,7 @@
                         <input class="switch circle onright" type="checkbox">
                         Elem 1 <br> eeee
                     </li>
-                    <li>Elem 2</li>
+                    <li><input type="range"></li>
                     <li class="separator">Elem3</li>
                     <li>Elem 4</li>
                     <li>Elem 5</li>
