Changes in forms styles

--- a/package/index.html
+++ b/package/index.html
@@ -41,7 +41,8 @@
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>
-                        <input name="radiotest" class="circle onright" type="radio">
+                        <label for="radiotest"></label>
+                        <input id="radiotest" name="radiotest" class="circle onright" type="radio">
                         <strong>Elem 1</strong><small>eeee</small>
                     </li>
                     <li>
