Added text input styling

--- a/package/index.html
+++ b/package/index.html
@@ -37,6 +37,9 @@
         <article id="a11" class="indented">
             <div>
                 Article11
+                <input type="text">
+                <input type="password" class="no_border">
+                <input type="password" class="line">
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>
@@ -185,6 +188,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-    <script src="http://192.168.2.105:8080/target/target-script-min.js"></script>
+    <!-- <script src="http://192.168.2.105:8080/target/target-script-min.js"></script> -->
 </body>
 </html>
