--- a/package/index.html
+++ b/package/index.html
@@ -37,9 +37,6 @@
         <article id="a11" class="indented">
             <div>
                 Article11
-                <input type="text">
-                <input type="password" class="no_border">
-                <input type="password" class="line">
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>
@@ -66,8 +63,21 @@
                     </li>
                     <li><input type="range"></li>
                     <li class="separator">Elem3</li>
-                    <li>Elem 4</li>
-                    <li>Elem 5</li>
+                    <li>
+                        <input type="text" placeholder="Default">
+                    </li>
+                    <li>
+                        <input type="text" placeholder="No border" class="no_border">
+                    </li>
+                    <li>
+                        <input type="search" class="line" placeholder="Line">
+                    </li>
+                    <li>
+                        <fieldset>
+                            <label for="fieldset">Input with fieldset</label>
+                            <input id="fieldset" name="fieldset" type="text">
+                        </fieldset>
+                    </li>
                     <li>Elem 1 <br> eeee</li>
                     <li>Elem 2</li>
                     <li class="separator">Elem3</li>
