Input.line working on mobile devices

--- a/package/index.html
+++ b/package/index.html
@@ -74,7 +74,7 @@
                     </li>
                     <li>
                         <fieldset>
-                            <label for="fieldset">Input with fieldset</label>
+                            <label for="fieldset">Fieldset</label>
                             <input id="fieldset" name="fieldset" type="text">
                         </fieldset>
                     </li>
@@ -198,6 +198,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-    <!-- <script src="http://192.168.2.105:8080/target/target-script-min.js"></script> -->
+    <script src="http://192.168.2.100:8080/target/target-script-min.js"></script>
 </body>
 </html>
