--- a/package/index.html
+++ b/package/index.html
@@ -37,6 +37,16 @@
         <article id="a11" class="indented">
             <div>
                 Article11
+                <label class="select">
+                    <select name="" id="">
+                        <option value="elem1">Elem1</option>
+                        <option value="elem2">Elem2</option>
+                        <option value="elem3">Elem3</option>
+                        <option value="elem4">Elem4</option>
+                        <option value="elem5">Elem5</option>
+                        <option value="elem6">Elem6</option>
+                    </select>
+                </label>
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>
@@ -198,6 +208,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-    <script src="http://192.168.2.100:8080/target/target-script-min.js"></script>
+    <!-- <script src="http://192.168.2.100:8080/target/target-script-min.js"></script> -->
 </body>
 </html>
