--- a/package/index.html
+++ b/package/index.html
@@ -37,16 +37,6 @@
         <article id="a11" class="indented">
             <div>
                 Article11
-                <label class="select">
-                    <select name="" id="">
-                        <option value="elem1">Elem1</option>
-                        <option value="elem2">Elem2</option>
-                        <option value="elem3">Elem3</option>
-                        <option value="elem4">Elem4</option>
-                        <option value="elem5">Elem5</option>
-                        <option value="elem6">Elem6</option>
-                    </select>
-                </label>
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>
@@ -87,6 +77,21 @@
                             <label for="fieldset">Fieldset</label>
                             <input id="fieldset" name="fieldset" type="text">
                         </fieldset>
+                    </li>
+                    <li>
+                        <label class="select">
+                            <select name="" id="">
+                                <option value="elem1">Elem1</option>
+                                <option value="elem2">Elem2</option>
+                                <option value="elem3">Elem3</option>
+                                <option value="elem4">Elem4</option>
+                                <option value="elem5">Elem5</option>
+                                <option value="elem6">Elem6</option>
+                            </select>
+                        </label>
+                    </li>
+                    <li>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
                     </li>
                     <li>Elem 1 <br> eeee</li>
                     <li>Elem 2</li>
