Changed select icon to work on phones

--- a/package/index.html
+++ b/package/index.html
@@ -89,6 +89,14 @@
                                 <option value="elem6">Elem6</option>
                             </select>
                         </label>
+                        <select name="" id="">
+                                <option value="elem1">Elem1</option>
+                                <option value="elem2">Elem2</option>
+                                <option value="elem3">Elem3</option>
+                                <option value="elem4">Elem4</option>
+                                <option value="elem5">Elem5</option>
+                                <option value="elem6">Elem6</option>
+                            </select>
                     </li>
                     <li>
                         <textarea name="" id="" cols="30" rows="10"></textarea>
