Added filedset inside forms styling

--- a/package/index.html
+++ b/package/index.html
@@ -37,6 +37,14 @@
         <article id="a11" class="indented">
             <div>
                 Article11
+                <form action="">
+                    <fieldset><label for="">Hola</label><input type="text"></fieldset>
+                    <fieldset><label for="">Hola</label><input type="text"></fieldset>
+                    <fieldset><label for="">Hola</label><input type="text"></fieldset>
+                    <fieldset><label for="">Hola</label><input type="text"></fieldset>
+                    <fieldset><label for="">Hola</label><input type="text"></fieldset>
+
+                </form>
                 <button class="anchor" data-section="section_2">Second Section</button>
                 <ul>
                     <li>
